feat: Implement SASS styling for the home header and generate compiled CSS.

--- a/index.html
+++ b/index.html
@@ -863,27 +863,55 @@
     </section>
 
 
-<footer class="footer">
-  <div class="container">
-    <div>
-        <i class="bi bi-geo-alt"></i>
-          <div>
-            <p class="infos">Address
-            </p>
-            <p class="infos-text">A108 Adam Street, New York, NY 535022</p>
+<!-- footer  -->
+<footer class="site-footer">
+  <div class="footer-content">
+    <div class="content-wrapper">
+      <div class="info-grid">
+        <!-- Address -->
+        <div class="location-block">
+          <h4><i class="bi bi-geo-alt"></i>Address</h4>
+          <p>
+            A108 Adam Street<br>
+            New York, NY 535022<br>
+          </p>
+        </div>
+        <!-- Contact -->
+        <div class="contact-block">
+          <h4><i class="bi bi-telephone"></i>Contact</h4>
+          <p>
+            <strong>Phone:</strong> +1 5589 55488 55<br>
+            <strong>Email:</strong> info@example.com<br>
+          </p>
+        </div>
+        <!-- Hours -->
+        <div class="hours-block">
+          <h4><i class="bi bi-clock"></i>Opening Hours</h4>
+          <p>
+            <strong>Mon-Sat:</strong> 11AM - 23PM<br>
+            <strong>Sunday:</strong> Closed
+          </p>
+        </div>
+        <!-- Social -->
+        <div class="social-block">
+          <h4>Follow Us</h4>
+          <div class="social-icons">
+            <a href="#"><i class="bi bi-twitter"></i></a>
+            <a href="#"><i class="bi bi-facebook"></i></a>
+            <a href="#"><i class="bi bi-instagram"></i></a>
+            <a href="#"><i class="bi bi-linkedin"></i></a>
           </div>
-      <div>
-        <i class="bi bi-telephone"></i>
-        <div>
-          <p class="infos">Phone: +1 5589 55488 55</p>
-          <p class="infos-text">email: info@example.com</p>
         </div>
       </div>
-      <div>
-        <i class="bi bi-phone"></i>
-        <div>
-          <p class="infos">Call:</p>
-          <p class="infos-text">+1 5589 55488 55</p>
+      <hr>
+      <div class="info-grid">
+        <div class="footer-bottom">
+          <div class="copyright-text">
+            &copy; 2025 <strong>Delicious</strong>. All Rights Reserved.
+          </div>
+          <div class="designer-credit">
+            Designed by <a href="#">BootstrapMade</a>
+          </div>
         </div>
       </div>
     </div>
